Added a page indicator for the Snapshot.

--- a/Get Playin!/Get Playin!/Base.lproj/Main.storyboard
+++ b/Get Playin!/Get Playin!/Base.lproj/Main.storyboard
@@ -18,6 +18,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="xYu-Sg-tf5">
+                                <rect key="frame" x="168" y="315" width="39" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </pageControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a39-Dg-pzT">
                                 <rect key="frame" x="33.5" y="533" width="308" height="100.5"/>
                                 <color key="backgroundColor" red="0.47365158889999998" green="0.65207640649999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
