--- a/Get Playin!/Get Playin!/Base.lproj/Main.storyboard
+++ b/Get Playin!/Get Playin!/Base.lproj/Main.storyboard
@@ -14,36 +14,86 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Get_Playin_" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="j2Q-qi-M5Z">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="xYu-Sg-tf5">
-                                <rect key="frame" x="168" y="315" width="39" height="37"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </pageControl>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a39-Dg-pzT">
-                                <rect key="frame" x="33.5" y="533" width="308" height="100.5"/>
-                                <color key="backgroundColor" red="0.47365158889999998" green="0.65207640649999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8AN-fS-UOY" customClass="DesignableView" customModule="Get_Playin_" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQm-mD-dnp" customClass="DesignableButton" customModule="Get_Playin_" customModuleProvider="target">
+                                        <rect key="frame" x="33" y="515" width="309" height="99"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="99" id="3ns-yS-Ey4"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="30"/>
+                                        <state key="normal" title="New Character">
+                                            <color key="titleColor" red="0.23137254900000001" green="0.1333333333" blue="0.086274509799999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="gradientColor1">
+                                                <color key="value" red="0.85490196078431369" green="0.67450980392156867" blue="0.2627450980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="gradientColor2">
+                                                <color key="value" red="0.33725490196078434" green="0.19215686274509805" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qCT-2A-WgW" customClass="DesignableView" customModule="Get_Playin_" customModuleProvider="target">
+                                        <rect key="frame" x="33" y="33" width="309" height="231"/>
+                                        <subviews>
+                                            <textField opaque="NO" alpha="0.25" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ErV-Iw-2gp" customClass="DesignableTextField" customModule="Get_Playin_" customModuleProvider="target">
+                                                <rect key="frame" x="33" y="0.0" width="243" height="231"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="ErV-Iw-2gp" firstAttribute="leading" secondItem="qCT-2A-WgW" secondAttribute="leading" constant="33" id="5vg-h3-z3Y"/>
+                                            <constraint firstItem="ErV-Iw-2gp" firstAttribute="top" secondItem="qCT-2A-WgW" secondAttribute="top" id="AnG-Jc-7pw"/>
+                                            <constraint firstAttribute="height" constant="231" id="Fjt-Hw-rqk"/>
+                                            <constraint firstAttribute="trailing" secondItem="ErV-Iw-2gp" secondAttribute="trailing" constant="33" id="Mh3-2e-p7o"/>
+                                            <constraint firstAttribute="bottom" secondItem="ErV-Iw-2gp" secondAttribute="bottom" id="sdL-ND-mJ9"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="gradientColor1">
+                                                <color key="value" red="0.85490196078431369" green="0.67450980392156867" blue="0.2627450980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="gradientColor2">
+                                                <color key="value" red="0.47843137254901963" green="0.33333333333333331" blue="0.10588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100.5" id="7y0-RK-sGT"/>
-                                    <constraint firstAttribute="width" constant="308" id="cde-fP-4Fl"/>
+                                    <constraint firstItem="qCT-2A-WgW" firstAttribute="leading" secondItem="8AN-fS-UOY" secondAttribute="leading" constant="33" id="4uO-up-jYc"/>
+                                    <constraint firstAttribute="trailing" secondItem="aQm-mD-dnp" secondAttribute="trailing" constant="33" id="6Cw-Q3-Tn5"/>
+                                    <constraint firstItem="qCT-2A-WgW" firstAttribute="top" secondItem="8AN-fS-UOY" secondAttribute="top" constant="33" id="G5N-y3-Xvk"/>
+                                    <constraint firstAttribute="bottom" secondItem="aQm-mD-dnp" secondAttribute="bottom" constant="33" id="Mn9-KV-9YV"/>
+                                    <constraint firstAttribute="trailing" secondItem="qCT-2A-WgW" secondAttribute="trailing" constant="33" id="NS1-IE-kOC"/>
+                                    <constraint firstItem="aQm-mD-dnp" firstAttribute="leading" secondItem="8AN-fS-UOY" secondAttribute="leading" constant="33" id="ZzN-dt-Kea"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                <color key="tintColor" red="0.47365158889999998" green="0.65207640649999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <state key="normal" title="New Character">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="gradientColor1">
+                                        <color key="value" red="0.89019607840000003" green="0.0" blue="0.13725490200000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="gradientColor2">
+                                        <color key="value" red="0.23137254901960785" green="0.13333333333333333" blue="0.086274509803921567" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="a39-Dg-pzT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="33.5" id="kY1-2H-eXV"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="a39-Dg-pzT" secondAttribute="trailing" constant="33.5" id="q0y-Di-Xob"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="a39-Dg-pzT" secondAttribute="bottom" constant="33.5" id="qyj-Xw-rjN"/>
+                            <constraint firstItem="8AN-fS-UOY" firstAttribute="top" secondItem="WVF-Na-Szm" secondAttribute="top" id="4Pe-Vd-Fbq"/>
+                            <constraint firstItem="WVF-Na-Szm" firstAttribute="trailing" secondItem="8AN-fS-UOY" secondAttribute="trailing" id="PrH-6i-KGC"/>
+                            <constraint firstItem="8AN-fS-UOY" firstAttribute="leading" secondItem="WVF-Na-Szm" secondAttribute="leading" id="mNd-fu-LdR"/>
+                            <constraint firstItem="WVF-Na-Szm" firstAttribute="bottom" secondItem="8AN-fS-UOY" secondAttribute="bottom" id="p3I-mk-2uN"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="WVF-Na-Szm"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
