--- a/Get Playin!/Get Playin!/Base.lproj/Main.storyboard
+++ b/Get Playin!/Get Playin!/Base.lproj/Main.storyboard
@@ -45,9 +45,10 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qCT-2A-WgW" customClass="DesignableView" customModule="Get_Playin_" customModuleProvider="target">
                                         <rect key="frame" x="33" y="33" width="309" height="231"/>
                                         <subviews>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.25" contentMode="scaleToFill" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UvE-51-JwV">
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UvE-51-JwV">
                                                 <rect key="frame" x="33" y="0.0" width="243" height="231"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" red="0.65098039215686276" green="0.53333333333333333" blue="0.26666666666666666" alpha="0.099957191780821922" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="textColor" red="0.31764705879999999" green="0.1960784314" blue="0.050980392159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="30"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
@@ -69,15 +70,26 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="constructionSign" translatesAutoresizingMaskIntoConstraints="NO" id="eyV-1A-q6F">
+                                        <rect key="frame" x="67" y="319" width="240" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="240" id="dfI-qq-bdW"/>
+                                            <constraint firstAttribute="height" constant="128" id="gTN-fu-FrK"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="qCT-2A-WgW" firstAttribute="leading" secondItem="8AN-fS-UOY" secondAttribute="leading" constant="33" id="4uO-up-jYc"/>
                                     <constraint firstAttribute="trailing" secondItem="aQm-mD-dnp" secondAttribute="trailing" constant="33" id="6Cw-Q3-Tn5"/>
+                                    <constraint firstItem="aQm-mD-dnp" firstAttribute="top" secondItem="eyV-1A-q6F" secondAttribute="bottom" constant="68" id="A5J-a2-L1b"/>
                                     <constraint firstItem="qCT-2A-WgW" firstAttribute="top" secondItem="8AN-fS-UOY" secondAttribute="top" constant="33" id="G5N-y3-Xvk"/>
+                                    <constraint firstItem="eyV-1A-q6F" firstAttribute="top" secondItem="qCT-2A-WgW" secondAttribute="bottom" constant="55" id="LGI-4o-JZY"/>
                                     <constraint firstAttribute="bottom" secondItem="aQm-mD-dnp" secondAttribute="bottom" constant="33" id="Mn9-KV-9YV"/>
                                     <constraint firstAttribute="trailing" secondItem="qCT-2A-WgW" secondAttribute="trailing" constant="33" id="NS1-IE-kOC"/>
+                                    <constraint firstAttribute="trailing" secondItem="eyV-1A-q6F" secondAttribute="trailing" constant="68" id="YcE-Tb-O2Y"/>
                                     <constraint firstItem="aQm-mD-dnp" firstAttribute="leading" secondItem="8AN-fS-UOY" secondAttribute="leading" constant="33" id="ZzN-dt-Kea"/>
+                                    <constraint firstItem="eyV-1A-q6F" firstAttribute="leading" secondItem="8AN-fS-UOY" secondAttribute="leading" constant="67" id="wBJ-IH-VB1"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="gradientColor1">
@@ -107,4 +119,7 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="constructionSign" width="263" height="191"/>
+    </resources>
 </document>
