--- a/Get Playin!/Get Playin!/CharacterSheet.storyboard
+++ b/Get Playin!/Get Playin!/CharacterSheet.storyboard
@@ -57,17 +57,6 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mAU-Z9-ica" customClass="DesignableTextField" customModule="Get_Playin_" customModuleProvider="target">
-                                <rect key="frame" x="198" y="119" width="132" height="36"/>
-                                <color key="backgroundColor" red="0.84705882349999995" green="0.63137254899999995" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="PMT-FP-5HV"/>
-                                    <constraint firstAttribute="width" constant="132" id="oVm-h4-ao3"/>
-                                </constraints>
-                                <color key="textColor" red="0.31764705879999999" green="0.1960784314" blue="0.050980392159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zX3-h2-V5K" customClass="DesignableButton" customModule="Get_Playin_" customModuleProvider="target">
                                 <rect key="frame" x="33" y="188" width="132" height="36"/>
                                 <constraints>
@@ -87,7 +76,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A1J-bf-mzT" customClass="DesignableButton" customModule="Get_Playin_" customModuleProvider="target">
-                                <rect key="frame" x="198" y="188" width="132" height="36"/>
+                                <rect key="frame" x="198" y="182" width="132" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="132" id="s0f-fZ-asU"/>
                                 </constraints>
@@ -123,7 +112,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qWd-aZ-dTR" customClass="DesignableButton" customModule="Get_Playin_" customModuleProvider="target">
-                                <rect key="frame" x="198" y="257" width="132" height="36"/>
+                                <rect key="frame" x="198" y="251" width="132" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="132" id="MQP-wf-WH6"/>
                                 </constraints>
@@ -149,28 +138,36 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nHh-Lm-XtN">
+                                <rect key="frame" x="198" y="119" width="144" height="30"/>
+                                <color key="backgroundColor" red="0.84705882349999995" green="0.63137254899999995" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.31764705879999999" green="0.1960784314" blue="0.050980392159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="PCy-fP-e75" firstAttribute="top" secondItem="WXy-NM-615" secondAttribute="top" id="0RJ-ee-MWM"/>
-                            <constraint firstItem="A1J-bf-mzT" firstAttribute="top" secondItem="mAU-Z9-ica" secondAttribute="bottom" constant="33" id="3b9-ut-H34"/>
                             <constraint firstItem="PCy-fP-e75" firstAttribute="leading" secondItem="WXy-NM-615" secondAttribute="leading" constant="33" id="4eF-2q-JBA"/>
-                            <constraint firstItem="mAU-Z9-ica" firstAttribute="top" secondItem="WXy-NM-615" secondAttribute="top" constant="99" id="B3k-OT-i9H"/>
                             <constraint firstItem="WXy-NM-615" firstAttribute="trailing" secondItem="9YI-xP-MWK" secondAttribute="trailing" constant="33" id="CSq-2e-bjI"/>
                             <constraint firstItem="zX3-h2-V5K" firstAttribute="top" secondItem="idc-Np-LR1" secondAttribute="bottom" constant="33" id="D4M-dP-DYf"/>
                             <constraint firstItem="WXy-NM-615" firstAttribute="bottom" secondItem="9YI-xP-MWK" secondAttribute="bottom" constant="33" id="EFb-ZU-zve"/>
                             <constraint firstItem="idc-Np-LR1" firstAttribute="top" secondItem="WXy-NM-615" secondAttribute="top" constant="99" id="ELG-ah-zqz"/>
                             <constraint firstItem="A1J-bf-mzT" firstAttribute="leading" secondItem="zX3-h2-V5K" secondAttribute="trailing" constant="33" id="FUD-Jm-sc1"/>
                             <constraint firstItem="WXy-NM-615" firstAttribute="trailing" secondItem="PCy-fP-e75" secondAttribute="trailing" constant="33" id="HJz-Gi-wag"/>
+                            <constraint firstItem="nHh-Lm-XtN" firstAttribute="top" secondItem="PCy-fP-e75" secondAttribute="bottom" constant="66" id="Mcm-mP-5tR"/>
                             <constraint firstItem="qWd-aZ-dTR" firstAttribute="top" secondItem="A1J-bf-mzT" secondAttribute="bottom" constant="33" id="QmS-EG-981"/>
                             <constraint firstItem="BIP-De-IGi" firstAttribute="leading" secondItem="WXy-NM-615" secondAttribute="leading" constant="33" id="Rho-cY-s5j"/>
                             <constraint firstItem="zX3-h2-V5K" firstAttribute="leading" secondItem="WXy-NM-615" secondAttribute="leading" constant="33" id="VJd-ND-9pg"/>
                             <constraint firstItem="qWd-aZ-dTR" firstAttribute="leading" secondItem="BIP-De-IGi" secondAttribute="trailing" constant="33" id="Wgj-cd-GBP"/>
+                            <constraint firstItem="WXy-NM-615" firstAttribute="trailing" secondItem="nHh-Lm-XtN" secondAttribute="trailing" constant="33" id="YqW-eJ-V3x"/>
                             <constraint firstItem="9YI-xP-MWK" firstAttribute="leading" secondItem="WXy-NM-615" secondAttribute="leading" constant="33" id="cd3-KC-ddw"/>
                             <constraint firstItem="idc-Np-LR1" firstAttribute="leading" secondItem="WXy-NM-615" secondAttribute="leading" constant="33" id="f8S-vY-TAX"/>
+                            <constraint firstItem="A1J-bf-mzT" firstAttribute="top" secondItem="nHh-Lm-XtN" secondAttribute="bottom" constant="33" id="gXm-0r-Gch"/>
                             <constraint firstItem="BIP-De-IGi" firstAttribute="top" secondItem="zX3-h2-V5K" secondAttribute="bottom" constant="33" id="mhe-UZ-xhd"/>
-                            <constraint firstItem="mAU-Z9-ica" firstAttribute="leading" secondItem="idc-Np-LR1" secondAttribute="trailing" constant="33" id="nT3-Gx-Igu"/>
+                            <constraint firstItem="nHh-Lm-XtN" firstAttribute="leading" secondItem="idc-Np-LR1" secondAttribute="trailing" constant="33" id="vjc-2v-ncJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="WXy-NM-615"/>
                         <userDefinedRuntimeAttributes>
@@ -192,7 +189,7 @@
                         <outlet property="DexterityScore" destination="dtd-TM-KcN" id="VoP-ju-wce"/>
                         <outlet property="IntelligenceModifier" destination="gOu-Le-m5S" id="RYK-No-Dwi"/>
                         <outlet property="IntelligenceScore" destination="kZ9-uV-cJR" id="M1k-g6-ilC"/>
-                        <outlet property="NameView" destination="mAU-Z9-ica" id="wFG-qb-vC7"/>
+                        <outlet property="NameView" destination="nHh-Lm-XtN" id="I3Q-wl-70D"/>
                         <outlet property="RaceView" destination="A1J-bf-mzT" id="ml2-jm-PcM"/>
                         <outlet property="SheetOneView" destination="xI1-UV-T1e" id="Ux9-me-rXg"/>
                         <outlet property="SheetTwoView" destination="j2R-3a-o3J" id="f8f-fS-ybm"/>
